# dify-datasource-ndjson

./: .difyignore  .gitignore  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
datasources/: ndjson.py  ndjson.yaml
ndjson_source/: __init__.py  cache.py  http.py  manifest.py  model.py  records.py  stream.py
provider/: ndjson.py  ndjson.yaml
tests/: conftest.py  test_cache.py  test_manifest.py  test_records.py  test_stream.py
