[project]
name = "dify-datasource-ndjson"
version = "0.0.4"
description = "Ingest a bulk NDJSON dump (optionally via a JSON manifest of compressed exports) into a Dify Knowledge base"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dify_plugin>=0.9.0",
    "requests>=2.32",
    "zstandard>=0.22",
]

[dependency-groups]
dev = []
